tests/NormalTests/paczka1/small_fuzzy/63433079.err
Error in line 3: Uds2rGKy A953 77,4
Error in line 10: ajLV4tpyMi A953 44,3
